--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,9 +16,11 @@
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="spec/superHeroDancerSpec.js"></script>
+  <script src="spec/pugDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
   <script src="src/superHeroDancer.js"></script>
+  <script src="src/pugDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
