refactored to work on my environment

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,12 +20,12 @@
       <audio
         controls
         class="btn"
-        src="../gif/music.mp4">
+        src="gif/music.mp4">
     </audio>
     </div>
     <script src="src/init.js"></script>
     <video autoplay muted loop id="myVideo">
-      <source src="../gif/video.mp4" type="video/mp4">
+      <source src="gif/video.mp4" type="video/mp4">
     </video>
 
     <!-- <audio
